# concept-10

./: .dockerignore  .env.example  .gitignore  AGENTIC_IMPLEMENTATION_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_MVP_OPTION1.md  DEPLOY_TARGETS.md  Dockerfile  ENVIRONMENT.md  ENV_FINAL_VALIDATION_REPORT.md  ENV_QUICK_REFERENCE.md  ENV_VALIDATION_REPORT.md  MISSING_ENV_SETUP_GUIDE.md  NEW_DEVELOPER_SETUP.md  PRODUCT_UI.md  README.md  SETUP.md  SUMMARY_GENERATION_FLOW.md  check_db_status.py  requirements-dev.txt  requirements.txt  test_agentic_endpoint.py
.codex/: config.toml
concept10-agentic/: .env.example  Dockerfile  README.md  TESTING_GUIDE.md  pyproject.toml
concept10-agentic/.github/copilot/: README.md
concept10-agentic/.github/workflows/: ci.yml
concept10-agentic/agent_orchestration_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
concept10-agentic/agents/orchestrator/: orchestrator_agent.yaml
concept10-agentic/agents/registry/: agent_registry.yaml  api.py  categorizer.py  loader.py
concept10-agentic/agents/specialist/: domain_agent.yaml
concept10-agentic/agents/utility/: tool_agent.yaml
concept10-agentic/api/: __init__.py  app.py  dependencies.py
concept10-agentic/api/routers/: __init__.py  orchestrate.py  orchestrator.py  specialist.py  utility.py
concept10-agentic/core/: __init__.py
concept10-agentic/dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
concept10-agentic/docs/: CREATING_NEW_AGENT.md  DEPLOYMENT.md  NEW_DEVELOPER_GUIDE.md  PROJECT_SETUP.md  README.md
concept10-agentic/observability/: __init__.py  config.py  langsmith_config.py  logging.py  middleware.py  otel.py  spans.py  tracking.py
concept10-agentic/tests/: __init__.py  conftest.py
(+193 files in other folders)
